flexbox row wrap - my role image pills - fix 2

--- a/style.css
+++ b/style.css
@@ -677,7 +677,7 @@ p#block-152eea257338807895a7c79f625a2305 {
 }
 
 .notion.callout.border {
-  box-shadow: 2px 2px 12px 0px rgba(240, 240, 240, 1); /*NOWE*/
+  box-shadow: 2px 2px 12px 0px rgba(240, 240, 240, 1) !important; /*NOWE*/
 }
 
 .notion-callout__icon {
@@ -702,18 +702,24 @@ p#block-152eea257338807895a7c79f625a2305 {
 /*Container na pills z elementami w My Role*/
 
 #block-162eea25733880abb74ce200978bc9db {
-  border: 0px !important;
-  padding: 0px !important;
-  margin: 0px !important;
+  border: 0px !important; /*ZMIANA*/
+  padding: 0px !important; /*ZMIANA*/
+  margin: 0px !important; /*ZMIANA*/
   box-shadow: none !important; /*NOWE*/
 }
   
 /*Bezposredni container z elementami pills w my role*/
 #block-162eea25733880abb74ce200978bc9db div {
-  flex-direction: row !important;
-  flex-wrap: wrap !important;
-  gap: 6px 6px !important; /*przerwa w pionie i w poziomie miedzy elementami*/
-  margin-left: 0px !important;
+  flex-direction: row !important; /*ZMIANA*/
+  flex-wrap: wrap !important; /*ZMIANA*/
+  /* gap: 6px 6px !important; przerwa w pionie i w poziomie miedzy elementami */
+  margin-left: 0px !important; /*ZMIANA*/
+}
+
+/*Elementy pills images*/
+#block-162eea25733880abb74ce200978bc9db div div {
+  padding-right: 6px !important; /*NOWE*/
+  margin-bottom: -4px !important; /*NOWE*/
 }
 
 
